Refactoring the logic for assigning specimens to observations.